--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="blue_200_stegano.jpg" />
+    <img src="./image/blue_200_stegano_2.jpg" />
 </body>
 </html>
