--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <img src="./image/blue_200_stegano_2.jpg" />
+    <a href="./compare/blue_200_compare.html">blue_200_compare</a>
+    <a href="./compare/green_200_compare.html">green_200_compare</a>
+    <a href="./stegano/200_1.html">blue_200_stegano</a>
+    <a href="./stegano/green_200_1.html">green_200_stegano</a>
 </body>
 </html>
