--- a/blue/compare/blue_compare_25.html
+++ b/blue/compare/blue_compare_25.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../../image/green_200_stegano_2.jpg" />
+    <img src="../../image/blue_compare_25.jpg" />
 </body>
 </html>
