--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>study</title>
 </head>
 <body>
+    <h1>basement</h1>
+    <a href="./basement.html">basement</a>
     <h1>green</h1>
     <h2>compare</h2>
     <a href="./green/compare/green_200_compare.html">green_200_compare</a>
