--- a/qrcode/qr_H_100.html
+++ b/qrcode/qr_H_100.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qr_H_100.png" />
+    <img src="../image/qr_100_big.png" />
 </body>
 </html>
