--- a/qrcode/qr_H_150.html
+++ b/qrcode/qr_H_150.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qr_H_150.png" />
+    <img src="../image/qr_150_big.png"/>
 </body>
 </html>
