--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <h1>QRcode</h1>
     <a href="./qrcode/qr_H_150.html">qr_H_150</a>
     <a href="./qrcode/qr_H_100.html">qr_H_100</a>
+    <a href="./qrcode/qr_H_1.html">qr_H_1</a>
+    <a href="./qrcode/qr_H_2.html">qr_H_2</a>
+    <a href="./qrcode/qr_H_3.html">qr_H_3</a>
+    <a href="./qrcode/qr_H_4.html">qr_H_4</a>
+    <a href="./qrcode/qr_H_5.html">qr_H_5</a>
     <a href="./qrcode/qr_double_red200.html">qr_double_red200</a>
     <a href="./qrcode/qr_double_red250.html">qr_double_red250</a>
     
