--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <a href="./qrcode/qr_H_3.html">qr_H_3</a>
     <a href="./qrcode/qr_H_4.html">qr_H_4</a>
     <a href="./qrcode/qr_H_5.html">qr_H_5</a>
+    <a href="./qrcode/qr_H.html">qr_H</a>
+    <a href="./qrcode/qr_Q.html">qr_Q</a>
+    <a href="./qrcode/qr_M.html">qr_M</a>
+    <a href="./qrcode/qr_L.html">qr_L</a>
     <a href="./qrcode/qr_double_red200.html">qr_double_red200</a>
     <a href="./qrcode/qr_double_red250.html">qr_double_red250</a>
     
