--- a/green/compare/green_200_compare.html
+++ b/green/compare/green_200_compare.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../../image/green_200.jpg" />
+    <img src="../../image/green_200.png" />
 </body>
 </html>
