--- a/green/compare/green_200_compare.html
+++ b/green/compare/green_200_compare.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <img src="../../image/green_200.png" />
+    <p>&nbsp;</p>
+
+    <p>&nbsp;</p>
+
+    <p>&nbsp;</p>
+
+    <p>&nbsp;</p>
+
+    <p>&nbsp;</p>
+
+
+    
+    <img src="../../image/green200.png" />
 </body>
 </html>
