--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="./qrcode/qr_Q.html">qr_Q</a>
     <a href="./qrcode/qr_M.html">qr_M</a>
     <a href="./qrcode/qr_L.html">qr_L</a>
+    <a href="./qrcode/test.html">test</a>
     <a href="./qrcode/qr_double_red200.html">qr_double_red200</a>
     <a href="./qrcode/qr_double_red250.html">qr_double_red250</a>
     
