--- a/qrcode/test.html
+++ b/qrcode/test.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qrH.png"/ width="200%">
+    <img src="../image/nqr_H.png"/ width="200%">
 </body>
 </html>
