--- a/qrcode/qr_L.html
+++ b/qrcode/qr_L.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qrL.png"/>
+    <img src="../image/nqr_L.png"/ width="100%">
 </body>
 </html>
