--- a/qrcode/qr_M.html
+++ b/qrcode/qr_M.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qrM.png"/>
+    <img src="../image/nqr_H.png"/ width="100%">
 </body>
 </html>
