--- a/qrcode/qr_Q.html
+++ b/qrcode/qr_Q.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/qrQ.png"/>
+    <img src="../image/nqr_Q.png"/ width="100%">
 </body>
 </html>
