--- a/compare/green_200_compare.html
+++ b/compare/green_200_compare.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/green_200_compare.jpg" />
+    <img src="../image/green_200.png"/ width="100%">
 </body>
 </html>
