--- a/compare/red_200_compare.html
+++ b/compare/red_200_compare.html
@@ -6,6 +6,6 @@
     <title>study</title>
 </head>
 <body>
-    <img src="../image/red_200.png"/ width="100%">
+    <img src="../image/red200.png"/ width="100%">
 </body>
 </html>
