--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>study</title>
 </head>
 <body>
-    <h1>restoration/h1>
+    <h1>restoration</h1>
     <a href="./restoration/g1.html">g1</a>
     <a href="./restoration/g2.html">g2</a>
     <a href="./restoration/b1.html">b1</a>
